Finish stamp and detail icons on hover but with spacing issues

--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,9 @@ button.sign-up {
 
 .descript {
   margin: 75px 30px;
-  max-width: 28%;
+  /* max-width: 28%; */
+  flex: 0 1 400px;
+
 }
 
 .description-body img {
@@ -86,9 +88,12 @@ button.sign-up {
 
 #descript-learn-more {
   margin-bottom: 100px;
-  padding: 20px;
+  margin-left: 40%;
+  margin-right: 40%;
+  padding: 15px;
   font-size: 1.5em;
   border-radius: 15px;
+  flex: 0 0 90%;
 }
 
 /* RANDOM DIVIDER */
@@ -156,6 +161,7 @@ img.user {
 
 #dropdownMenuButton {
   border-radius: 20px 0 0 20px;
+  width: 200px;
 }
 
 #new-post {
@@ -190,6 +196,7 @@ img.user {
   border-radius: 20px;
   color: rgb(211, 211, 211);
   font-size: 0.9em;
+  place-items: center;
 }
 
 .message {
@@ -198,6 +205,7 @@ img.user {
   color: white;
   font-weight: bold;
   font-size: 1.2em;
+  justify-self: start;
 }
 
 .details {
@@ -226,6 +234,7 @@ hr {
   grid-column: 1;
   grid-row: rline3;
   align-self: center;
+  justify-self: start;
 }
 
 i.fa-comment {
@@ -235,4 +244,60 @@ i.fa-comment {
   padding-right: 0;
   margin-top: 2px;
   margin-right: 0;
+}
+
+.username {
+  grid-column: 6 / 8;
+  grid-row: rline3;
+  justify-self: end;
+  align-self: center;
+  color: blue;
+}
+
+.icon-wrapper {
+  /* display: grid; */
+  grid-column: 8;
+  /* justify-self: center; */
+  /* place-items: center; */
+}
+
+#stamp-wrapper {
+  grid-row: rline1;
+}
+
+#detail-wrapper {
+  grid-row: rline2;
+}
+
+.forum-pic {
+  position: relative;
+  width: 40px;
+  top: 40px;
+  left: 30px;
+}
+
+.hidden {
+  visibility: hidden;
+}
+
+.icon-hover {
+  position: relative;
+  /* width: 100px; */
+  top: 30px;
+  margin-right: -40px;
+  left: 80px;
+  visibility: hidden;
+}
+
+#stamp-wrapper:hover .icon-hover {
+  visibility: visible;
+}
+
+#detail-wrapper:hover .icon-hover {
+  visibility: visible;
+}
+
+.halftone {
+  filter: grayscale(100%);
+  opacity: 30%;
 }
